--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,12 @@
 		@@include('components/bem-blocks/menu-more/_menu-more.html')
 		@@include('components/bem-blocks/global-menu/_global-menu.html')
 		@@include('components/bem-blocks/my-work/_my-work.html')
+		@@include('components/bem-blocks/help-user/_help-user.html')
+		@@include('components/bem-blocks/widget-settings/_widget-settings.html')
+		@@include('components/bem-blocks/delete-pop-up/_delete-pop-up.html')
+		@@include('components/bem-blocks/add-task/_add-task.html')
+		@@include('components/bem-blocks/subheader-dots-settings/_dots-settings.html')
+		@@include('components/bem-blocks/interval-menu/_interval-menu.html')
 	</main>
 
 	@@include('components/page-blocks/_footer.html')
